--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 #root {
   margin: 0;
   text-align: center;
+  min-height: 100vh;
 }
 
 h1,
@@ -11,4 +12,12 @@ h5,
 h6,
 p {
   margin: 0;
+}
+
+#menuAndResultContainer {
+  width: 100%;
+  min-height: 80%;
+
+  display: flex;
+  flex-direction: row;
 }
