--- a/src/Components/Menu/Menu.css
+++ b/src/Components/Menu/Menu.css
@@ -1,3 +1,20 @@
 #MenuContainer {
     border: 1px solid red;
+
+    width: 50%;
+
+    display: flex;
+    flex-direction: column;
+
+}
+
+#MenuItemsContainer {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+}
+
+#MenuContainer h1, h2, p {
+    text-align: left;
 }
