--- a/src/Components/Menu/Menu.css
+++ b/src/Components/Menu/Menu.css
@@ -1,10 +1,10 @@
 #MenuContainer {
-    border: 1px solid red;
-
     width: 50%;
 
     display: flex;
     flex-direction: column;
+
+    margin: 0px 20px 0 20px;
 
 }
 
