--- a/src/Components/MenuItem/MenuItem.css
+++ b/src/Components/MenuItem/MenuItem.css
@@ -1,10 +1,22 @@
 .MenuItemContainer {
     width: 100%;
-    
+
     display: flex;
     flex-direction: row;
 
     justify-content: space-between;
 
-    border: 1px solid blue;
+    margin: 5px 0 5px 0;
+
+    padding: 1% 0 1% 0;
+
+    background-color: white;
+    border: 2px solid #2D18BF;
+    border-radius: 5px;
+
+    cursor: pointer;
+}
+
+.MenuItemContainer p {
+    margin: 0 10px 0 10px;
 }
