--- a/src/Components/Tip/Tip.css
+++ b/src/Components/Tip/Tip.css
@@ -1,11 +1,16 @@
 #TipContainer {
-
+    margin: 0 0 15px 0;
 }
 
 #TipForm {
-
+    margin: 10px 0 0 0;
 }
 
 .tipOption {
+    display: flex;
+}
 
+.tipOption label {
+    width: 9%;
+    display: block;
 }
