--- a/src/Components/TotalItem/TotalItem.css
+++ b/src/Components/TotalItem/TotalItem.css
@@ -5,10 +5,16 @@
     justify-content: space-between;
 
     width: 100%;
-    border: 1px red solid;
 }
 
-.TotalItemText {}
+.TotalItemText {
+    margin: 0 5px 0 5px;
+}
+
+.itemName {
+    font-size: 18px;
+    font-weight: 500;
+}
 
 .TotalItemButtonContainer {
     display: flex;
@@ -16,17 +22,36 @@
 
     justify-content: center;
     align-items: center;
+
+    margin: 0 10px 0 10px;
 }
 
-.TotalItemButton {
+.TotalItemButtonNormal {
     border-radius: 50%;
-    width: 40%;
+    height: 100%;
     aspect-ratio: 1 / 1;
-    
+
     border: none;
-    background-color: brown;
+    background-color: #2D18BF;
 
     display: flex;
     justify-content: center;
     align-items: center;
+
+    margin: 0 0 0 5px;
+}
+
+.TotalItemButtonCuantity1 {
+    border-radius: 50%;
+    height: 100%;
+    aspect-ratio: 1 / 1;
+
+    border: none;
+    background-color: #d4d4dc;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin: 0 0 0 5px;
 }
